# src/adapters/controllers/projects/project-controller.ts
@@ -1,7 +1,7 @@
 import { Request as EXRequest } from "express";
-import { Body, Controller, Get, Path, Post, Route, SuccessResponse, Tags, Request, Security, Example } from "tsoa";
+import { Body, Controller, Get, Path, Post, Route, SuccessResponse, Tags, Request, Security, Example, Put } from "tsoa";
 import { inject, provideSingleton } from "../../../middlewares/inversify/util";
-import { ProjectCreateParams, ProjectResponse, ExampleProjectResponse } from "./project-model";
+import { ProjectParams, ProjectResponse, ExampleProjectResponse } from "./project-model";
 import { IProjectUseCase } from "../../../usecases/projects/project-interface";
 import { ProjectUsecase } from "../../../usecases/projects/project-usecase";
 import { APISecurity } from "../../../infrastructure/express/authentication";
@@ -16,8 +16,16 @@ export class ProjectController extends Controller {
   @Post()
   @Security(APISecurity.AUTH0_USER)
   @SuccessResponse("200", "Return a project")
-  public async createProject(@Request() _: EXRequest, @Body() params: ProjectCreateParams): Promise<ProjectResponse> {
-    return ProjectResponse.fromDTO(await this.projectUsecase.createProject(ProjectCreateParams.toDTO(params)));
+  public async createProject(@Request() _: EXRequest, @Body() params: ProjectParams): Promise<ProjectResponse> {
+    return ProjectResponse.fromDTO(await this.projectUsecase.createProject(ProjectParams.toDTO(params)));
+  }
+
+  @Example<ProjectResponse>(ExampleProjectResponse)
+  @Put("{id}")
+  @Security(APISecurity.AUTH0_USER)
+  @SuccessResponse("200", "Return a project")
+  public async updateProject(@Request() _: EXRequest, @Body() params: ProjectParams): Promise<ProjectResponse> {
+    return ProjectResponse.fromDTO(await this.projectUsecase.updateProject(ProjectParams.toDTO(params)));
   }
 
   @Example<ProjectResponse>(ExampleProjectResponse)
